--- a/client/hwlib/debian/changelog
+++ b/client/hwlib/debian/changelog
@@ -1,5 +1,5 @@
-rust-hwlib (0.0.1-1) focal; urgency=medium
+rust-hwlib (0.0.1) focal; urgency=medium
 
   * Publish the initial version of the hwlib for focal
 
- -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Thu, 03 Jul 2024 13:01:54 +0300
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Thu, 04 Jul 2024 13:01:54 +0300
