Change package version to 0.0.1~ppa1 Preserve the clean version and then switch to it once the package gets approved for mir

--- a/client/hwlib/debian/changelog
+++ b/client/hwlib/debian/changelog
@@ -1,4 +1,4 @@
-rust-hwlib (0.0.1) focal; urgency=medium
+rust-hwlib (0.0.1~ppa1) focal; urgency=medium
 
   * Publish the initial version of the hwlib for focal
 
