Update changelog and related files to publishing for oracular

--- a/client/hwlib/debian/changelog
+++ b/client/hwlib/debian/changelog
@@ -1,11 +1,5 @@
-rust-hwlib (0.0.1~ppa2) focal; urgency=medium
+rust-hwlib (0.0.1~ppa1) oracular; urgency=medium
 
-  * Fix lintian errors and warnings
+  * Publish the initial version of the hwlib for oracular
 
- -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Mon, 08 Jul 2024 17:14:10 +0300
-
-rust-hwlib (0.0.1~ppa1) focal; urgency=medium
-
-  * Publish the initial version of the hwlib for focal
-
- -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Thu, 04 Jul 2024 13:01:54 +0300
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Tue, 09 Jul 2024 15:10:14 +0300
