--- a/client/hwlib/debian/changelog
+++ b/client/hwlib/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.0.1~ppa2) oracular; urgency=medium
+
+  * Add the hwlib implementation for collecting hardware data.
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Thu, 09 Oct 2024 15:45:08 +0300
+
 rust-hwlib (0.0.1~ppa1) oracular; urgency=medium
 
   * Publish the initial version of the hwlib for oracular
