Pack both hwlib and hwctl in one source package
* Creates one source package that produces two binaries
  (librust-hwlib-dev and hwctl)

* Moves debian/ dir under the client/ folder

* Updates the debian/generate-checksum.py script to generate the
  cargo-checksum.json file only for the hwlib as required

* Rewrite the dh_auto_install section in the debian/rules file since
  dh-cargo tries to install the whole workspace as a package. The
  changes install the hwlib as a library and hwctl as a binary package,
  repeating the logic implemented in dh-cargo source code.

--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,10 @@
+rust-hwlib (0.0.1~ppa3) oracular; urgency=medium
+
+  * Provide both hwlib library and hwctl CLI tool.
+  Add component tests for the hwlib code.
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Mon, 02 Dec 2024 13:45:06 +0200
+
 rust-hwlib (0.0.1~ppa2) oracular; urgency=medium
 
   * Add the hwlib implementation for collecting hardware data.
