--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,10 @@
+rust-hwlib (0.9.0~ppa2) plucky; urgency=medium
+
+  * Update cargo dependencies.
+  * Pack the package for plucky release.
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Thu, 06 Feb 2025 11:40:16 +0100
+
 rust-hwlib (0.9.0~ppa1) oracular; urgency=medium
 
   * Release 0.9.0 version of the client.
