--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.9.0~24.04~ppa2) noble; urgency=medium
+
+  * Backport 0.9.0~ppa2 to noble.
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Wed, 12 Feb 2025 12:46:39 +0200
+
 rust-hwlib (0.9.0~ppa2) plucky; urgency=medium
 
   * Update cargo dependencies.
