--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.9.0~20.04~ppa2) focal; urgency=medium
+
+  * Backport 0.9.0~ppa2 to focal.
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Wed, 12 Feb 2025 14:19:48 +0200
+
 rust-hwlib (0.9.0~ppa2) plucky; urgency=medium
 
   * Update cargo dependencies.
