--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.9.0~ppa3) plucky; urgency=medium
+
+  * Don't output the request information in hwctl.
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Mon, 17 Feb 2025 12:50:15 +0100
+
 rust-hwlib (0.9.0~ppa2) plucky; urgency=medium
 
   * Update cargo dependencies.
