--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,7 +1,8 @@
-rust-hwlib (0.9.0~ppa8) plucky; urgency=medium
+rust-hwlib (0.9.0~ppa8) questing; urgency=medium
 
   * Add integration tests to autopkgtests
   * Update debian/copyright to include vendored dependencies licenses
+  * Package the project for Questing 
 
  -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Thu, 01 May 2025 12:34:53 +0200
 
