--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.9.0~24.10~ppa8) oracular; urgency=medium
+
+  * Backport 0.9.0~ppa8 to oracular.
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Fri, 09 May 2025 20:23:43 +0200
+
 rust-hwlib (0.9.0~ppa8) questing; urgency=medium
 
   * Add integration tests to autopkgtests
