--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.9.0~20.04~ppa8) focal; urgency=medium
+
+  * Backport 0.9.0~ppa8 to focal. 
+
+ -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Fri, 09 May 2025 23:49:50 +0200
+
 rust-hwlib (0.9.0~ppa8) questing; urgency=medium
 
   * Add integration tests to autopkgtests
