--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.9.2) questing; urgency=medium
+
+  * Replace lsb-release dependency with os-release Rust library
+
+ -- Pedro Avalos <pedro.avalosjimenez@canonical.com>  Sat, 17 May 2025 09:31:10 +0200
+
 rust-hwlib (0.9.1) questing; urgency=medium
 
   * Add AppArmor profile
