--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,3 +1,9 @@
+rust-hwlib (0.9.2) questing; urgency=medium
+
+  * Replace dpkg command with arch (coreutils)
+
+ -- Pedro Avalos <pedro.avalosjimenez@canonical.com>  Mon, 19 May 2025 13:26:35 -0400
+
 rust-hwlib (0.9.1) questing; urgency=medium
 
   * Add AppArmor profile
