--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,13 +1,8 @@
-rust-hwlib (0.9.2) questing; urgency=medium
-
-  * Replace dpkg command with arch (coreutils)
-
- -- Pedro Avalos <pedro.avalosjimenez@canonical.com>  Mon, 19 May 2025 13:26:35 -0400
-
 rust-hwlib (0.9.1) questing; urgency=medium
 
   * Add AppArmor profile
   * Remove librust-hwlib-dev deb binary package
+  * Replace dpkg command with Rust ARCH
 
  -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Thu, 15 May 2025 16:44:17 +0200
 
