--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -1,9 +1,8 @@
 rust-hwlib (0.9.2) questing; urgency=medium
 
-  * Remove tokio crate dependency
+  * Remove tokio, rehex, itertools, lazy_static crate dependencies
   * Use ureq crate instead of reqwest
-  * Update the debian/vendor-rust.sh script to skip binary and shell files in
-    all vendored dependencies, not just vcpkg one
+  * Remove the debian/vendor-rust.sh script
   * Remove examples and tests from rust-vendor/ directory
 
  -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Mon, 07 Jul 2025 15:32:12 +0200
