--- a/client/debian/changelog
+++ b/client/debian/changelog
@@ -5,7 +5,7 @@ rust-hwlib (0.9.2) questing; urgency=medium
   * Remove the debian/vendor-rust.sh script
   * Remove examples and tests from rust-vendor/ directory
   * Remove debian/compat file and use debhelper-compat in Build-Depends instead
-  * Fix apparmor kmod denied rm mask
+  * Fix apparmor kmod denied mr mask
   * Update readme and contributing files
 
  -- Nadzeya Hutsko <nadzeya.hutsko@canonical.com>  Mon, 07 Jul 2025 15:32:12 +0200
